ECOM-1257: one more missed edit to fix shipping method alignment

--- a/app/design/frontend/Scottsbase/default/web/css/source/_scottsbasecheckout.scss
+++ b/app/design/frontend/Scottsbase/default/web/css/source/_scottsbasecheckout.scss
@@ -500,11 +500,6 @@
   text-decoration: underline;
 }
 
-
-td#label_method_fedex-nextday_flatrate, td#label_method_fedex-2ndday_flatrate {
-    padding-left: 0px;
-}
-
 td#label_carrier_flat-rate-shipping_flatrate,
 td#label_carrier_fedex-2ndday_flatrate,
 td#label_carrier_fedex-nextday_flatrate {
